# looptight

./: .gitignore  .looptight.toml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REVIEW-QUEUE.md  SECURITY.md  action.yml  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-06-28T16-27-02-753Z.yml  page-2026-06-28T16-35-04-295Z.yml  page-2026-06-28T16-38-23-568Z.yml  page-2026-06-28T17-09-25-012Z.yml  page-2026-06-28T17-12-18-301Z.yml
deploy/: Dockerfile  looptight-daemon.service
docs/: SPEC.md  STATUS.md  architecture.md  daemon.md  goal.md  integrations.md  remote-mobile-management.md  unattended.md  usage.md
docs/superpowers/plans/: 2026-06-18-checkpoint-failure-safety.md  2026-06-18-continuous-improve.md  2026-06-21-repository-coordinator.md  2026-06-22-metacognitive-idea-generation.md
docs/superpowers/specs/: 2026-06-18-continuous-improve-design.md  2026-06-18-dogfood-improvement-loop-design.md  2026-06-18-looptight-propose-design.md  2026-06-21-repository-coordinator-design.md  2026-06-22-metacognitive-idea-generation-design.md  2026-06-24-looptight-goal-design.md  2026-06-25-escalation-report-design.md  2026-06-26-session-native-stall-signal-design.md
src/looptight/: __init__.py  __main__.py  budget.py  checkpoint.py  claims.py  cli.py  commands.py  config.py  console.py  coordinator.py  daemon.py  detect.py  discovery.py  experience.py  fsutil.py  goal.py  grounding.py  hook.py  idea_eval.py  idea_identity.py  improve.py  integration.py  integration_queue.py  lessons.py  limits.py  loop.py  metacog.py  proctree.py  prompts.py  propose.py  protocol_commands.py  ranking.py  reflect.py  settings.py  skill.py  summary.py  swarm.py  tasks.py  trajectory.py  types.py  (+2 more)
src/looptight/adapters/: __init__.py  base.py  claude.py  codex.py  opencode.py
tests/: conftest.py  e2e_test.py  test_adapters.py  test_checkpoint.py  test_claims.py  test_cli.py  test_config.py  test_console.py  test_coordinator.py  test_coordinator_multiprocess.py  test_daemon.py  test_detect.py  test_discovery.py  test_docs.py  test_experience.py  test_fsutil.py  test_goal.py  test_hook.py  test_idea_eval.py  test_idea_identity.py  test_improve.py  test_integration.py  test_integration_queue.py  test_lessons.py  test_limits.py  test_loop.py  test_metacog.py  test_proctree.py  test_prompts.py  test_propose.py  test_readme_glossary.py  test_reflect.py  test_settings.py  test_skill.py  test_summary.py  test_swarm.py  test_tasks.py  test_trajectory.py  test_ui.py  test_verify.py
tests/fixtures/: claude_result.json
