[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looptight"
version = "0.1.0"
description = "A validation-gated task protocol for Codex, Claude Code, and OpenCode."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Andrew Li" }]
keywords = ["ai", "coding-agent", "claude-code", "codex", "opencode", "agent-loop", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/andrewli8/looptight"
Repository = "https://github.com/andrewli8/looptight"
Issues = "https://github.com/andrewli8/looptight/issues"
Changelog = "https://github.com/andrewli8/looptight/blob/main/CHANGELOG.md"
Documentation = "https://github.com/andrewli8/looptight/tree/main/docs"

[project.scripts]
looptight = "looptight.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/looptight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.6",
]
